[gd_scene load_steps=3 format=3 uid="uid://cgypytgu10ukf"]

[ext_resource type="Theme" uid="uid://cym7llujgpfif" path="res://scenes/ui/global_themes/main_theme.tres" id="1_36rj7"]
[ext_resource type="Script" uid="uid://dbg3p7lxpm3ji" path="res://scenes/ui/popup_message/popup_message.gd" id="2_62mss"]

[node name="PopupMessage" type="Window"]
process_mode = 3
oversampling_override = 1.0
title = "New email!"
size = Vector2i(800, 500)
visible = false
always_on_top = true
popup_window = true
content_scale_aspect = 4
theme = ExtResource("1_36rj7")
script = ExtResource("2_62mss")

[node name="GridContainer" type="GridContainer" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="RichTextLabel" type="RichTextLabel" parent="GridContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
text = "Hello, I'm a new client.

Can you work for me?"
fit_content = true
scroll_active = false
horizontal_alignment = 1
vertical_alignment = 1

[node name="ClientName" type="Label" parent="GridContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 8
text = "client-name"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Interval" type="Label" parent="GridContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "interval"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Payment" type="Label" parent="GridContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "payment"
horizontal_alignment = 1
vertical_alignment = 1

[node name="GridContainer" type="GridContainer" parent="GridContainer"]
custom_minimum_size = Vector2(0, 50)
layout_mode = 2
size_flags_horizontal = 3
columns = 2

[node name="Accept" type="Button" parent="GridContainer/GridContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
text = "Accept"

[node name="Refuse" type="Button" parent="GridContainer/GridContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
text = "Refuse"

[connection signal="close_requested" from="." to="." method="_on_close_requested"]
[connection signal="pressed" from="GridContainer/GridContainer/Accept" to="." method="_on_accept_pressed"]
[connection signal="pressed" from="GridContainer/GridContainer/Refuse" to="." method="_on_refuse_pressed"]
